--- a/src/views/static/landing.ejs
+++ b/src/views/static/landing.ejs
@@ -14,7 +14,7 @@
         
 
 
-        <img src="/img/TravelerZ-landing.png" class="img-fluid landingImg" alt="image" href="/">
+        <img src="/img/TravelerZ-landing.png" class="img-fluid landingImg" alt="image" href="/trips">
       
 
       </main>
