Submitting for grading. Added CRUD routes, all unit tests and controller action and queries for Trips.

--- a/src/views/trips/index.ejs
+++ b/src/views/trips/index.ejs
@@ -17,6 +17,8 @@
         <% }) %>
       </ul>
 
+      <a href="/trips/new" class="btn btn-success">New Trip</a>
+
     </main>
   </body>
 </html>
