--- a/src/views/trips/show.ejs
+++ b/src/views/trips/show.ejs
@@ -16,6 +16,9 @@
       <form style="display:initial" action="/trips/<%= trip.id %>/destroy" method="post">
         <button type="submit" class="btn btn-danger">Delete Trip</button>
       </form>
+      
+      <a href="/trips" class="btn btn-info">Back to All Trips</a>
+
     </main>
 
     <% include ../static/partials/baseScripts.ejs %>
