Got comment routes working..Pushing to Production

--- a/src/views/trips/show.ejs
+++ b/src/views/trips/show.ejs
@@ -13,17 +13,23 @@
 
       <br>
 
-      <h1>Comments</h1>
+      <h1>Comments - <a href="/trips/<%= trip.id %>/comments/new" class="btn btn-success">New Comment</a></h1>
+
+      
+
+      <hr>
 
       <ul class="list-group">
         <% trip.comments.forEach((comment) => { %>
           <li class="list-group-item">
-            <a href="/trips/<%= trip.id %>/comments/<%= comment.id %>"> <%= comment.body %> </a>
+            <!-- <a href="/trips/<%= trip.id %>/comments/<%= comment.id %>"> <%= comment.body %> </a> -->
+            <h6><%= comment.body %></h6>
+            <form style="display:initial" action="/trips/<%= comment.tripId %>/comments/<%= comment.id %>/destroy" method="post">
+              <button type="submit" class="btn btn-danger">Delete Comment</button>
+            </form>
           </li>
         <% }) %>
       </ul>
-
-      <a href="/trips/<%= trip.id %>/comments/new" class="btn btn-success">New Comment</a>
 
       <hr>
 
