--- a/src/views/static/partials/navbar.ejs
+++ b/src/views/static/partials/navbar.ejs
@@ -11,6 +11,18 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <% if(currentUser) { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/users/sign_out">Sign out</a>
+          </li>
+        <% } else { %>
+          <li class="nav-item">
+              <a class="nav-link" href="/users/sign_up">Sign up</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/users/sign_in">Sign in</a>
+            </li>
+          <% }%>
       </ul>
     </div>
   </div>
