--- a/src/views/trips/index.ejs
+++ b/src/views/trips/index.ejs
@@ -7,7 +7,15 @@
     <main class="container">
       <% include ../static/partials/navbar.ejs %>
 
-      <h1>Trips</h1>
+      <header class="jumbotron my-4">
+          <h1 class="display-3">All Trips</h1>
+          <p class="lead">This is a collection of trips recently taken and shared with the world</p>
+          <% if(!currentUser){ %>
+          <a href="/users/sign_up" class="btn btn-primary btn-lg">Sign up</a>
+          <% } %>
+       </header>
+
+      <!-- <h1>Trips</h1> -->
 
       <ul class="list-group">
         <% trips.forEach((trip) => { %>
